fixed alignement in searchbar

--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,13 @@ body {
   height: 100%;
   margin: 0px;
   padding: 0px;
-  overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
   text-rendering: optimizeLegibility;
   scroll-behavior: smooth;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: transparent !important;
 }
 
 @media (min-width: 600px) {
