--- a/src/views/Dashboard/Dashboard.css
+++ b/src/views/Dashboard/Dashboard.css
@@ -80,7 +80,7 @@ body {
 .banner-header {
   font-size: 2.8rem;
   font-weight: 150;
-  padding-bottom: 0.57vw;
+  padding-bottom: 0.5vw;
   font-family: "o", sans-serif;
   color: #222222 !important;
 }
@@ -105,7 +105,7 @@ body {
   overflow: hidden;
   border-radius: 100px;
   min-width: 126px;
-  margin-top: 5px;
+  margin-top: 3px;
   /* font-family: "AvenirNextLTProRegular"; */
 }
 .about {
@@ -139,6 +139,14 @@ body {
 }
 
 @media (min-width: 992px) {
+  .recipes-container {
+    padding-left: 4.2vw;
+    padding-right: 4.2vw;
+  }
+
+  .banner-sub-container {
+    padding-left: 1.7%;
+  }
   .banner-header {
     margin-right: 10%;
     min-width: 400px;
@@ -146,7 +154,7 @@ body {
 
   .banner-container {
     position: absolute;
-    margin-left: 8.9%;
+    margin-left: 10.1vw;
     margin-top: 3.8%;
     text-align: left;
   }
@@ -250,6 +258,9 @@ p {
 @media screen and (max-width: 1200px) and (min-width: 891px) {
   .banner-img {
     margin-left: 35%;
+  }
+  .banner-container {
+    padding-left: -30px;
   }
 }
 
