--- a/src/views/Sidebar/Sidebar.css
+++ b/src/views/Sidebar/Sidebar.css
@@ -85,7 +85,7 @@
 }
 
 .sidebar-nav::-webkit-scrollbar {
-  display: none;
+  /* display: none; */
 }
 .sidebar .nav-link:hover {
   height: 100%;
@@ -437,17 +437,6 @@ html:not([dir="rtl"]) .sidebar-show.sidebar-fixed .app-footer {
   /* background-color: #db3a0d; */
 
   color: #00a287;
-}
-
-::-webkit-scrollbar {
-  -webkit-appearance: none;
-  width: 7px;
-}
-
-::-webkit-scrollbar-thumb {
-  border-radius: 4px;
-  background-color: rgba(0, 0, 0, 0.5);
-  box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
 }
 
 .logo > div {
